Aplicações de salvamento das questões em arquivo e alterações como retirada da main