@@ -1,47 +1,72 @@
 package Functions_class;
 import java.io.*;
 import java.net.*;
+import java.text.SimpleDateFormat;
 import java.util.*;
 
 public class QuestionarioInterativo {
     private static final String API_KEY = "AIzaSyCzYcP0zEVCnOu8D1e7TtUc5WaQhYFQT9c";
     private static final String API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent";
-    private static final Scanner scanner = new Scanner(System.in);
+    private static final String PROMPT = """
+    
+    Gere 5 perguntas objetivas sobre %s com 4 alternativas cada (A, B, C, D) e a resposta correta.
+    Formato:
+    1. Pergunta: [texto]
+    A) [opção A]
+    B) [opção B]
+    C) [opção C]
+    D) [opção D]
+    Resposta: [letra]
+    
+    Retorne apenas o texto das perguntas, sem títulos ou comentários e a cada pergunta coloque a palavra Pergunta: 
+    """;
+
+    private List<Pergunta> todasPerguntas = new ArrayList<>();
+    private final List<Pergunta> perguntasAcertadas = new ArrayList<>();
+    private final List<Pergunta> perguntasErradas = new ArrayList<>();
+    private final Scanner scanner = new Scanner(System.in);
 
     public static void main(String[] args) {
-        try (scanner) {
-            System.out.println("🎯 QUESTIONÁRIO INTERATIVO 🎯");
+        new QuestionarioInterativo().iniciarQuestionario();
+    }
+
+    @SuppressWarnings("ConvertToTryWithResources")
+    public void iniciarQuestionario() {
+        try {
+            System.out.println("Bem-vindo ao Questionário Interativo!");
             System.out.print("\nDigite o tema do questionário (ex: Java, História, Ciências): ");
             String tema = scanner.nextLine();
 
-            System.out.println("\n🔍 Gerando perguntas sobre " + tema + "...");
-            String resposta = chamarGemini(
-                "Gere 5 perguntas objetivas sobre " + tema + " com 4 alternativas cada (A, B, C, D) e a resposta correta.\n" +
-                "Formato:\n" +
-                "1. Pergunta: [texto]\n" +
-                "A) [opção A]\n" +
-                "B) [opção B]\n" +
-                "C) [opção C]\n" +
-                "D) [opção D]\n" +
-                "Resposta: [letra]\n\n" +
-                "Retorne apenas o texto das perguntas, sem títulos ou comentários e a cada pergunta coloque a palavra Pergunta: "
-            );
+            System.out.println("\nGerando perguntas sobre " + tema + "...");
+            String resposta = chamarGemini(String.format(PROMPT, tema));
             String textoResposta = extrairTextoResposta(resposta);
-            List<Pergunta> perguntas = parsearPerguntas(textoResposta);
-            int acertos = aplicarQuestionario(perguntas);
+            
+            String dataAtual = new SimpleDateFormat("dd/MM/yyyy HH:mm:ss").format(new Date());
+            todasPerguntas = parsearPerguntas(textoResposta, dataAtual);
 
-            System.out.println("\n📊 RESULTADO FINAL");
-            System.out.println("Você acertou " + acertos + " de " + perguntas.size() + " perguntas!");
+            if (todasPerguntas.isEmpty()) {
+                System.out.println("Não foi possível gerar perguntas. Tente novamente.");
+                return;
+            }
+
+            int acertos = aplicarQuestionario();
+            
+            System.out.println("\nRESULTADO FINAL");
+            System.out.println("Você acertou " + acertos + " de " + todasPerguntas.size() + " perguntas!");
             System.out.println("\n🔍 Respostas corretas:");
-            mostrarRespostasCorretas(perguntas);
+            mostrarRespostasCorretas();
 
+            salvarArquivos();
         } catch (IOException e) {
-            System.err.println("❌ Erro: " + e.getMessage());
+            System.err.println("Erro: " + e.getMessage());
+        } finally {
+            scanner.close();
         }
     }
 
-    private static String chamarGemini(String prompt) throws IOException {
-        HttpURLConnection conn = (HttpURLConnection) new URL(API_URL + "?key=" + API_KEY).openConnection();
+    private String chamarGemini(String prompt) throws IOException {
+        URI uri = URI.create(API_URL + "?key=" + API_KEY);
+        HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
         conn.setRequestMethod("POST");
         conn.setRequestProperty("Content-Type", "application/json");
         conn.setDoOutput(true);
@@ -67,7 +92,7 @@ public class QuestionarioInterativo {
         return response.toString();
     }
 
-    private static String extrairTextoResposta(String jsonResposta) {
+    private String extrairTextoResposta(String jsonResposta) {
         int inicio = jsonResposta.indexOf("\"text\": \"") + 9;
         int fim = jsonResposta.indexOf("\"", inicio);
         
@@ -80,7 +105,7 @@ public class QuestionarioInterativo {
                 .replace("\\\"", "\"");
     }
 
-    private static List<Pergunta> parsearPerguntas(String texto) {
+    private List<Pergunta> parsearPerguntas(String texto, String dataCriacao) {
         List<Pergunta> perguntas = new ArrayList<>();
         String[] linhas = texto.split("\n");
         
@@ -90,6 +115,7 @@ public class QuestionarioInterativo {
             if (linha.startsWith("Pergunta:") || linha.matches("^\\d+\\. Pergunta:.*")) {
                 atual = new Pergunta();
                 atual.texto = linha.substring(linha.indexOf(":") + 1).trim();
+                atual.dataCriacao = dataCriacao;
             } else if (linha.matches("^[A-D]\\) .*")) {
                 if (atual != null) {
                     atual.alternativas.add(linha.substring(3).trim());
@@ -104,42 +130,87 @@ public class QuestionarioInterativo {
         return perguntas;
     }
 
-    private static int aplicarQuestionario(List<Pergunta> perguntas) {
+    private int aplicarQuestionario() {
+        perguntasAcertadas.clear();
+        perguntasErradas.clear();
         int acertos = 0;
-        System.out.println("\n📝 RESPONDA AS PERGUNTAS:\n");
         
-        for (int i = 0; i < perguntas.size(); i++) {
-            Pergunta p = perguntas.get(i);
+        System.out.println("\nQUESTIONÁRIO:\n");
+        
+        for (int i = 0; i < todasPerguntas.size(); i++) {
+            Pergunta p = todasPerguntas.get(i);
             System.out.println((i+1) + ". " + p.texto);
-            for (int j = 0; j < p.alternativas.size(); j++) {
-                System.out.println((char)('A' + j) + ") " + p.alternativas.get(j));
+            System.out.println("   Data: " + p.dataCriacao);
+            
+            char letra = 'A';
+            for (String alternativa : p.alternativas) {
+                System.out.println("   " + letra + ") " + alternativa);
+                letra++;
             }
             
-            System.out.print("Sua resposta (A-D): ");
-            String respostaUsuario = scanner.nextLine().toUpperCase();
+            System.out.print("\nSua resposta (A-D): ");
+            String respostaUsuario = scanner.nextLine().trim().toUpperCase();
+            
+            while (respostaUsuario.length() != 1 || !"ABCD".contains(respostaUsuario)) {
+                System.out.print("Resposta inválida! Digite A, B, C ou D: ");
+                respostaUsuario = scanner.nextLine().trim().toUpperCase();
+            }
             
             if (respostaUsuario.equals(p.resposta)) {
-                System.out.println("✅ Correto!\n");
+                System.out.println("Correto!\n");
+                perguntasAcertadas.add(p);
                 acertos++;
             } else {
-                System.out.println("❌ Errado! A resposta correta era " + p.resposta + "\n");
+                System.out.println("Errado! A resposta correta era " + p.resposta + "\n");
+                perguntasErradas.add(p);
             }
         }
         return acertos;
     }
 
-    private static void mostrarRespostasCorretas(List<Pergunta> perguntas) {
-        for (int i = 0; i < perguntas.size(); i++) {
-            Pergunta p = perguntas.get(i);
+    private void mostrarRespostasCorretas() {
+        for (int i = 0; i < todasPerguntas.size(); i++) {
+            Pergunta p = todasPerguntas.get(i);
             System.out.println((i+1) + ". " + p.texto);
-            System.out.println("Resposta correta: " + p.resposta + ") " + 
+            System.out.println("   Resposta correta: " + p.resposta + ") " + 
                 p.alternativas.get(p.resposta.charAt(0) - 'A') + "\n");
         }
     }
 
-    static class Pergunta {
+    private void salvarArquivos() throws IOException {
+        salvarListaEmArquivo(todasPerguntas, "todas_questoes.dat");
+        salvarListaEmArquivo(perguntasAcertadas, "acertadas.dat");
+        salvarListaEmArquivo(perguntasErradas, "erradas.dat");
+        
+        System.out.println("\nArquivos salvos com sucesso:");
+        System.out.println("- todas_questoes.dat");
+        System.out.println("- acertadas.dat");
+        System.out.println("- erradas.dat");
+    }
+
+    private void salvarListaEmArquivo(List<Pergunta> lista, String nomeArquivo) throws IOException {
+        try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(nomeArquivo))) {
+            oos.writeObject(lista);
+        }
+    }
+
+    public List<Pergunta> getTodasPerguntas() {
+        return new ArrayList<>(todasPerguntas);
+    }
+
+    public List<Pergunta> getPerguntasAcertadas() {
+        return new ArrayList<>(perguntasAcertadas);
+    }
+
+    public List<Pergunta> getPerguntasErradas() {
+        return new ArrayList<>(perguntasErradas);
+    }
+
+    public static class Pergunta implements Serializable {
+        private static final long serialVersionUID = 1L;
         String texto;
         List<String> alternativas = new ArrayList<>();
         String resposta;
+        String dataCriacao;
     }
 }
